--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   mysql:
-    image: kongrong25/5glog_grafana:mysql_grafana
+    image: docker pull kongrong25/5g_log_mysql:1.0
     container_name: my_grafana_mysql
     environment:
       - MYSQL_ROOT_PASSWORD=1235
@@ -13,7 +13,7 @@ services:
         ipv4_address: "192.168.11.10"
 
   grafana:
-    image: kongrong25/5glog_grafana:grafana
+    image: kongrong25/5g_log_grafana:1.0
     container_name: my_grafana
     ports:
       - "3003:3000"
