--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     depends_on:
       - mysql
+    volumes:
+      - grafana_data:/var/lib/grafana
     networks:
       grafana-net:
         ipv4_address: "192.168.11.11"
